syntax = "proto2";

package info.anodsplace.headunit.aap.protocol.proto;
option java_outer_classname = "Media";

enum MsgType
{
    SETUPREQUEST = 0x8000;
    STARTREQUEST = 0x8001;
    STOPREQUEST = 0x8002;
    CONFIGRESPONSE = 0x8003;
    ACK = 0x8004;
    MICREQUEST = 0x8005;
    MICRESPONSE = 0x8006;
    VIDEOFOCUSREQUESTNOTIFICATION = 0x8007;
    VIDEOFOCUSNOTIFICATION = 0x8008;
}

enum MediaCodecType
{
    AUDIO = 1;
    VIDEO = 3;
}

enum AudioStreamType
{
    NONE = 0;
    SPEECH = 1;
    SYSTEM = 2;
    MEDIA = 3;
    ALARM = 4;
}

message AudioConfiguration
{
    required uint32 sample_rate = 1;
    required uint32 number_of_bits = 2;
    required uint32 number_of_channels = 3;
}

message Start
{
    required int32 session_id = 1;
    required uint32 configuration_index = 2;
}

message Ack
{
    required int32 session_id = 1;
    required uint32 ack = 2;
}

message MicrophoneRequest
{
    required bool open = 1;
    required bool anc_enabled = 2;
    required bool ec_enabled = 3;
    required int32 max_unacked = 4;
}

message MicrophoneResponse
{
    required int32 status = 1;
    required uint32 session_id = 2;
}

enum VideoFocusMode
{
    FOCUSED = 1;
    UNFOCUSED = 2;
}

message VideoFocusRequestNotification
{
    enum VideoFocusReason
    {
        REASON_1 = 1;
        REASON_2 = 2;
    }

    required int32 disp_channel_id = 1;
    required VideoFocusMode mode = 2;
    required VideoFocusReason reason = 3;
}

message VideoFocusNotification
{
    required VideoFocusMode mode = 1;
    required bool unsolicited = 2;
}

message MediaSetupRequest
{
    required uint32 type = 1;
}

message Config
{
    enum ConfigStatus
    {
        DEVICE = 1;
        HEADUNIT = 2;
    }
    required ConfigStatus status = 1;
    required uint32 max_unacked = 2;
    repeated uint32 configuration_indices = 3;
}